kubernetes/registry-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: dev
  labels:
    app: registry-deployment
  name: registry-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      app: registry-deployment
  template:
    metadata:
      labels:
        app: registry-deployment
    spec:
      volumes:
      - name: registry-volume
        persistentVolumeClaim:
          claimName: registry-pvc
      - name: setup
        emptyDir: {}
      containers:
      # - image: registry:2 # konradkleine/docker-registry-frontend
      # - image: registry:2 # jc21/registry-ui
      - image: registry:2.8.2 # joxit/docker-registry-ui:main
        name: registry
        ports:
        - containerPort: 5000
        readinessProbe:
          tcpSocket:
            port: 5000
          initialDelaySeconds: 15
          periodSeconds: 10
        livenessProbe:
          tcpSocket:
            port: 5000
          initialDelaySeconds: 5
          periodSeconds: 5
        resources:
          requests:
            cpu: "250m"
            memory: "1Gi" #
          limits:
            cpu: "500m"
            memory: "2Gi"
        volumeMounts:
        - name: registry-volume
          mountPath: /images
        - name: setup
          mountPath: /auth
