kubernetes/ui-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: dev
  labels:
    app: ui-deployment
  name: ui-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      app: ui-deployment
  template:
    metadata:
      labels:
        app: ui-deployment
    spec:
      containers:
      # 👇
      - image: joxit/docker-registry-ui:main
        name: ui
        ports:
        - containerPort: 80
        readinessProbe:
          tcpSocket:
            port: 80
          initialDelaySeconds: 15
          periodSeconds: 10
        livenessProbe:
          tcpSocket:
            port: 80
          initialDelaySeconds: 5
          periodSeconds: 5
        resources:
          requests:
            cpu: "250m"
            memory: "64Mi" #
          limits:
            cpu: "500m"
            memory: "128Mi"
