kubernetes/ui-svc.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: ui-svc
  name: ui-svc
  namespace: dev
spec:
  ports:
  - name: ports
    port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: ui-deployment
  type: NodePort
