kubernetes/ui-netpol.yml
# ⚓ 📢 https://docs.aws.amazon.com/eks/latest/userguide/cni-network-policy.html
# ⚓ 📢 https://kubernetes.io/docs/concepts/services-networking/network-policies/
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: ui-netpol
  namespace: dev
spec:
  podSelector:
    matchLabels:
      app: ui-deployment
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - {}
  egress:
    - to:
        - namespaceSelector:
            matchLabels:
              ns: dev
          podSelector:
            matchLabels:
              app: registry-deployment
      ports:
        - protocol: TCP
          port: 5000
